test/syc/bad/inlineltypedef.c
/*
 * Invalid use of 'inline' with typedef in local scope.
 */

void foo(void)
{
	typedef inline int i_t(void);
}
